--- a/testlocalread.html
+++ b/testlocalread.html
@@ -7,7 +7,7 @@
 </HEAD>
 <BODY onLoad="initBody();">
 <script>
-function download(filename, text) {
+function downloadText(filename, text) {
   var element = document.createElement('a');
   element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
   element.setAttribute('download', filename);
@@ -19,6 +19,20 @@ function download(filename, text) {
 
   document.body.removeChild(element);
 }
+
+function downloadImage(filename, text) {
+  var element = document.createElement('a');
+  element.setAttribute('href', 'data:image/png;base64,' + encodeURIComponent(text));
+  element.setAttribute('download', filename);
+
+  element.style.display = 'none';
+  document.body.appendChild(element);
+
+  element.click();
+
+  document.body.removeChild(element);
+}
+
 </script>
 
   <H1>Пример локальной загрузки/выгрузки файлов.</H1>
@@ -44,10 +58,10 @@ function download(filename, text) {
     <hr> 
 
 <H3>Загрузка текста в экранную форму(readAsText).</H3>
-<form onsubmit="download(this['name'].value, this['text'].value)">
-  Имя файла : <input type="text" name="name" value="test.txt" width=20>
-  <input type="submit" value="Выгрузить" class=button><br>
-  <textarea name="text" rows="10" cols="75" >Hello world. Русский текст.</textarea><br>
+<form onsubmit="downloadText(this['name'].value, this['text'].value)">
+  Имя файла : <input type="text" id="form_name" name="name" value="test.txt" width=20>
+  <input type="submit" value="Выгрузить и обновить экран" class=button><br>
+  <textarea id="form_text" name="text" rows="10" cols="75" >Hello world. Русский текст.</textarea><br>
   Выберите файл для загрузки : <input type="file" accept='text/*' onChange="openFileForm(event)">
     <script type="text/javascript"> 
      var openFileForm = function(event) {
@@ -61,6 +75,7 @@ function download(filename, text) {
      };
     </script>
 </form>      
+<input type="submit" value="Просто выгрузить" class=button onClick="downloadText(document.getElementById('form_name').value,document.getElementById('form_text').value)"><br>
   
 <H3>Загрузка изображения на html страницу(readAsDataURL).</H3>
 <input type='file' accept='image/*' onchange="openFileImage(event,'image1')"><br>
@@ -76,6 +91,7 @@ function download(filename, text) {
     reader.readAsDataURL(input.files[0]);
   };
 </script>
+<input type="submit" value="Просто выгрузить" class=button onClick="downloadImage('test.gif'.document.getElementById('image1').src)"><br>
 <hr> 
 <img id='image1'>
 <hr> 
