--- a/testfb2local.html
+++ b/testfb2local.html
@@ -14,8 +14,8 @@
        var input = event.target;
        var reader = new FileReader();
        reader.onload = function(){
-         var fb2 = reader.result;   
-         document.getElementById(key).textContent=fb2; 
+         var fb2 = reader.result;
+         GetRSS(document.getElementById(key), fb2, '/fb2html.xslt');    
        };
       reader.readAsText(input.files[0]);
      };
