--- a/testfb2local.html
+++ b/testfb2local.html
@@ -14,10 +14,9 @@
        var input = event.target;
        var reader = new FileReader();
        reader.onload = function(){
-         var fb2 = reader.result;
-         var xmlFile = document.implementation.createDocument("","",null);
-         parser=new DOMParser();
-         xmlFile=parser.parseFromString(reader.result,"text/xml");
+         var fb2 = document.implementation.createDocument("","",null);
+         parser = new DOMParser();
+         fb2 = parser.parseFromString(reader.result,"text/xml");
          document.getElementById(key).innerHTML = MakeXSLT(fb2, '/fb2html.xslt');
        };
        reader.readAsText(input.files[0]);
