--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
  <li> В каждой папке может существовать своя рамка. Если рамки нет, она будет наследоваться из родительской папки. 
  <li> Сама страница является рамкой для элементов находящихся на других страница. 
  <li> Страница может быть подгружена не полностью, а только определенная ее секция. 
- <li> Навигация осуществляется по единая карте сайта.  
+ <li> Единая карта сайта.  
  <li> Новостная rss лента так же является навигатором.  
 </ol>
 
