--- a/testcrossdomain.html
+++ b/testcrossdomain.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY onLoad="initBody();">
 <script>
-function testQuery()
+function testQuery(url)
 {
 // (1)
 var XHR = ("onload" in new XMLHttpRequest()) ? XMLHttpRequest : XDomainRequest;
@@ -16,19 +16,23 @@ var XHR = ("onload" in new XMLHttpRequest()) ? XMLHttpRequest : XDomainRequest;
 var xhr = new XHR();
 
 // (2) запрос на другой домен :)
-xhr.open('GET', 'https://rss.newsru.com/top/big/', true);
+alert(url);
+xhr.open('GET', url, true);
 
 xhr.onload = function() {
   alert( this.responseText );
 }
 
 xhr.onerror = function() {
-  alert( 'Ошибка ' + this.status );
+  alert( 'Ошибка запроса' + this.status );
 }
 xhr.send();
 }
 </script>
-<input type="submit" value="Query" class=button onClick="testQuery();"><br>
+<form>
+<input type="input" name="url" class=button onClick="testQuery();"><br>
+<input type="submit" value="Query" class=button onClick="testQuery(this['url'].value);"><br>
+</form>
 
 </BODY>
 </HTML>
