--- a/testcrossdomain.html
+++ b/testcrossdomain.html
@@ -30,7 +30,7 @@ xhr.send();
 }
 </script>
 <form>
-<input type="input" name="url" class=button onClick="testQuery();"><br>
+<input type="input" name="url" value="https://ochicherin.github.io/rss.xml">
 <input type="submit" value="Query" class=button onClick="testQuery(this['url'].value);"><br>
 </form>
 
