--- a/testcrossdomain.html
+++ b/testcrossdomain.html
@@ -30,7 +30,7 @@ xhr.send();
 }
 </script>
 <input type="input" id="url" value="https://ochicherin.github.io/rss.xml">
-<input type="submit" value="Query" class=button onClick="document.getElementById('url').value);"><br>
+<input type="submit" value="Query" class=button onClick="testQuery(document.getElementById('url').value);"><br>
 
 </BODY>
 </HTML>
