--- a/testcrossdomain.html
+++ b/testcrossdomain.html
@@ -29,7 +29,7 @@ xhr.onerror = function() {
 xhr.send();
 }
 </script>
-<input type="input" id="url" value="https://ochicherin.github.io/rss.xml">
+<input type="input" id="url" value="https://lenta.ru/rss">
 <input type="submit" value="Query" class=button onClick="testQuery(document.getElementById('url').value);"><br>
 
 </BODY>
