--- a/demo/data/pigs.html
+++ b/demo/data/pigs.html
@@ -1,9 +1,9 @@
-  <option value="p1.jpg"> </option>
-  <option value="p2.jpg"> </option>
-  <option value="p3.jpg"> </option>
-  <option value="p4.jpg"> </option>
-  <option value="p5.jpg"> </option>
-  <option value="p6.jpg"> </option>
-  <option value="p7.jpg"> </option>
-  <option value="p8.jpg"> </option>
-  <option value="p9.jpg"> </option>
+  <option value="p1.jpg">Жили были три поросенка</option>
+  <option value="p2.jpg">Первый построил дом из соломы</option>
+  <option value="p3.jpg">Второй построил дом из дерева</option>
+  <option value="p4.jpg">Третий занялся добычей глины</option>
+  <option value="p5.jpg">Два поросенка весело отдыхали</option>
+  <option value="p6.jpg">Третий упорно трудился </option>
+  <option value="p7.jpg">Трудился . </option>
+  <option value="p8.jpg">Трудился .. </option>
+  <option value="p9.jpg">Трудился ... </option>
