--- a/demo/data/rovers.html
+++ b/demo/data/rovers.html
@@ -1,13 +1,13 @@
-  <option value="image001.jpg"> </option>
-  <option value="image002.jpg"> </option>
-  <option value="image003.jpg"> </option>
-  <option value="image004.jpg"> </option>
-  <option value="image005.jpg"> </option>
-  <option value="image006.jpg"> </option>
-  <option value="image007.jpg"> </option>
-  <option value="image008.jpg"> </option>
-  <option value="image009.jpg"> </option>
-  <option value="image010.jpg"> </option>
-  <option value="image011.jpg"> </option>
-  <option value="image012.jpg"> </option>
-  <option value="image013.jpg"> </option>
+  <option value="image001.jpg">1 </option>
+  <option value="image002.jpg">2 </option>
+  <option value="image003.jpg">3 </option>
+  <option value="image004.jpg">4 </option>
+  <option value="image005.jpg">5 </option>
+  <option value="image006.jpg">6 </option>
+  <option value="image007.jpg">7 </option>
+  <option value="image008.jpg">8 </option>
+  <option value="image009.jpg">9 </option>
+  <option value="image010.jpg">10 </option>
+  <option value="image011.jpg">11 </option>
+  <option value="image012.jpg">12 </option>
+  <option value="image013.jpg">13 </option>
