--- a/demo/data/pigs.html
+++ b/demo/data/pigs.html
@@ -1,9 +1,9 @@
-  <option value="p1.jpg">Жили были три поросенка</option>
-  <option value="p2.jpg">Первый построил дом из соломы</option>
-  <option value="p3.jpg">Второй построил дом из дерева</option>
-  <option value="p4.jpg">Третий занялся добычей глины</option>
-  <option value="p5.jpg">Два поросенка весело отдыхали</option>
-  <option value="p6.jpg">Третий упорно трудился </option>
-  <option value="p7.jpg">Трудился . </option>
-  <option value="p8.jpg">Трудился .. </option>
-  <option value="p9.jpg">Трудился ... </option>
+  <option value="p1.jpg">Р–РёР»Рё Р±С‹Р»Рё С‚СЂРё РїРѕСЂРѕСЃРµРЅРєР°</option>
+  <option value="p2.jpg">РџРµСЂРІС‹Р№ РїРѕСЃС‚СЂРѕРёР» РґРѕРј РёР· СЃРѕР»РѕРјС‹</option>
+  <option value="p3.jpg">Р’С‚РѕСЂРѕР№ РїРѕСЃС‚СЂРѕРёР» РґРѕРј РёР· РґРµСЂРµРІР°</option>
+  <option value="p4.jpg">РўСЂРµС‚РёР№ Р·Р°РЅСЏР»СЃСЏ РґРѕР±С‹С‡РµР№ РіР»РёРЅС‹</option>
+  <option value="p5.jpg">Р”РІР° РїРѕСЂРѕСЃРµРЅРєР° РІРµСЃРµР»Рѕ РѕС‚РґС‹С…Р°Р»Рё</option>
+  <option value="p6.jpg">РўСЂРµС‚РёР№ СѓРїРѕСЂРЅРѕ С‚СЂСѓРґРёР»СЃСЏ </option>
+  <option value="p7.jpg">РўСЂСѓРґРёР»СЃСЏ . </option>
+  <option value="p8.jpg">РўСЂСѓРґРёР»СЃСЏ .. </option>
+  <option value="p9.jpg">РўСЂСѓРґРёР»СЃСЏ ... </option>
