--- a/demo/data/rovers.html
+++ b/demo/data/rovers.html
@@ -1,13 +1,59 @@
-  <option value="image001.jpg">1 </option>
-  <option value="image002.jpg">2 </option>
-  <option value="image003.jpg">3 </option>
-  <option value="image004.jpg">4 </option>
-  <option value="image005.jpg">5 </option>
-  <option value="image006.jpg">6 </option>
-  <option value="image007.jpg">7 </option>
-  <option value="image008.jpg">8 </option>
-  <option value="image009.jpg">9 </option>
-  <option value="image010.jpg">10 </option>
-  <option value="image011.jpg">11 </option>
-  <option value="image012.jpg">12 </option>
-  <option value="image013.jpg">13 </option>
+<option value="image001.jpg">Жила была одна команда гребцов </option>
+<option value="image002.jpg">Вызвала наша команда на соревнование по
+гребле команду конкурентов из другой страны. В
+состав той и другой команды включили по 8
+гребцов.
+</option>
+<option value="image003.jpg">ФИНИШ
+Обе команды тренировались очень упорно. И к
+моменту соревнований они были в одинаковой
+кондиции. Но конкуренты нас победили, обойдя
+на километр.
+</option>
+<option value="image004.jpg">Настроение в нашей команде было хуже некуда.
+Высшее руководство задумалось над тем, как нам
+победить их в следующем году. И позвали тогда
+группу аналитиков, чтобы проанализировать
+ситуацию и найти спасительное решение.
+</option>
+<option value="image005.jpg">В результате после нескольких
+дней детального анализа команд
+они пришли к заключению, что
+конкуренты имеют 7 гребцов и
+только одного капитана.
+</option>
+<option value="image006.jpg">Вместе с тем, наша команда имела
+целых 7 капитанов и только одного
+гребца.
+</option>
+<option value="image007.jpg">И тут менеджмент нашей команды вдруг озарило:
+было предложено нанять консалтинговую фирму для
+реструктуризации нашей команды.
+</option>
+<option value="image008.jpg">После нескольких месяцев консультирования они
+пришли к заключению, что наша команда имеет
+слишком много капитанов и слишком мало гребцов.
+На основе этого анализа они сделали предложение:
+структуру нашей команды надо поменять.
+</option>
+<option value="image009.jpg">С этого дня у нас должно быть только 4 капитана, 2
+менеджера, один топ-менеджер и один гребец.
+Согласно этому, они пришли к решению, что с гребцом
+надо интенсивно работать, чтобы повысить его
+мотивацию и стремление к победе.
+</option>
+<option value="image010.jpg">ФИНИШ
+На следующий год конкуренты победили
+с разрывом в два километра.
+</option>
+<option value="image011.jpg">Гребца исключили из команды, поскольку были не
+удовлетворены результатом его работы.
+ </option>
+<option value="image012.jpg">Менеджеров наградили за высокие показатели по
+мотивации команды в отчетном периоде.
+</option>
+<option value="image013.jpg">Консалтинговая фирма провела новый анализ,
+который показал, что стратегия была хорошая,
+мотивация ОК, но средства реализации плохие.
+Сейчас наша команда проектирует новую лодку.
+</option>
