--- a/demo/data/rovers.html
+++ b/demo/data/rovers.html
@@ -1,59 +1,59 @@
-<option value="image001.jpg">Жила была одна команда гребцов </option>
-<option value="image002.jpg">Вызвала наша команда на соревнование по
-гребле команду конкурентов из другой страны. В
-состав той и другой команды включили по 8
-гребцов.
+<option value="image001.jpg">Р–РёР»Р° Р±С‹Р»Р° РѕРґРЅР° РєРѕРјР°РЅРґР° РіСЂРµР±С†РѕРІ </option>
+<option value="image002.jpg">Р’С‹Р·РІР°Р»Р° РЅР°С€Р° РєРѕРјР°РЅРґР° РЅР° СЃРѕСЂРµРІРЅРѕРІР°РЅРёРµ РїРѕ
+РіСЂРµР±Р»Рµ РєРѕРјР°РЅРґСѓ РєРѕРЅРєСѓСЂРµРЅС‚РѕРІ РёР· РґСЂСѓРіРѕР№ СЃС‚СЂР°РЅС‹. Р’
+СЃРѕСЃС‚Р°РІ С‚РѕР№ Рё РґСЂСѓРіРѕР№ РєРѕРјР°РЅРґС‹ РІРєР»СЋС‡РёР»Рё РїРѕ 8
+РіСЂРµР±С†РѕРІ.
 </option>
-<option value="image003.jpg">ФИНИШ
-Обе команды тренировались очень упорно. И к
-моменту соревнований они были в одинаковой
-кондиции. Но конкуренты нас победили, обойдя
-на километр.
+<option value="image003.jpg">Р¤РРќРРЁ
+РћР±Рµ РєРѕРјР°РЅРґС‹ С‚СЂРµРЅРёСЂРѕРІР°Р»РёСЃСЊ РѕС‡РµРЅСЊ СѓРїРѕСЂРЅРѕ. Р Рє
+РјРѕРјРµРЅС‚Сѓ СЃРѕСЂРµРІРЅРѕРІР°РЅРёР№ РѕРЅРё Р±С‹Р»Рё РІ РѕРґРёРЅР°РєРѕРІРѕР№
+РєРѕРЅРґРёС†РёРё. РќРѕ РєРѕРЅРєСѓСЂРµРЅС‚С‹ РЅР°СЃ РїРѕР±РµРґРёР»Рё, РѕР±РѕР№РґСЏ
+РЅР° РєРёР»РѕРјРµС‚СЂ.
 </option>
-<option value="image004.jpg">Настроение в нашей команде было хуже некуда.
-Высшее руководство задумалось над тем, как нам
-победить их в следующем году. И позвали тогда
-группу аналитиков, чтобы проанализировать
-ситуацию и найти спасительное решение.
+<option value="image004.jpg">РќР°СЃС‚СЂРѕРµРЅРёРµ РІ РЅР°С€РµР№ РєРѕРјР°РЅРґРµ Р±С‹Р»Рѕ С…СѓР¶Рµ РЅРµРєСѓРґР°.
+Р’С‹СЃС€РµРµ СЂСѓРєРѕРІРѕРґСЃС‚РІРѕ Р·Р°РґСѓРјР°Р»РѕСЃСЊ РЅР°Рґ С‚РµРј, РєР°Рє РЅР°Рј
+РїРѕР±РµРґРёС‚СЊ РёС… РІ СЃР»РµРґСѓСЋС‰РµРј РіРѕРґСѓ. Р РїРѕР·РІР°Р»Рё С‚РѕРіРґР°
+РіСЂСѓРїРїСѓ Р°РЅР°Р»РёС‚РёРєРѕРІ, С‡С‚РѕР±С‹ РїСЂРѕР°РЅР°Р»РёР·РёСЂРѕРІР°С‚СЊ
+СЃРёС‚СѓР°С†РёСЋ Рё РЅР°Р№С‚Рё СЃРїР°СЃРёС‚РµР»СЊРЅРѕРµ СЂРµС€РµРЅРёРµ.
 </option>
-<option value="image005.jpg">В результате после нескольких
-дней детального анализа команд
-они пришли к заключению, что
-конкуренты имеют 7 гребцов и
-только одного капитана.
+<option value="image005.jpg">Р’ СЂРµР·СѓР»СЊС‚Р°С‚Рµ РїРѕСЃР»Рµ РЅРµСЃРєРѕР»СЊРєРёС…
+РґРЅРµР№ РґРµС‚Р°Р»СЊРЅРѕРіРѕ Р°РЅР°Р»РёР·Р° РєРѕРјР°РЅРґ
+РѕРЅРё РїСЂРёС€Р»Рё Рє Р·Р°РєР»СЋС‡РµРЅРёСЋ, С‡С‚Рѕ
+РєРѕРЅРєСѓСЂРµРЅС‚С‹ РёРјРµСЋС‚ 7 РіСЂРµР±С†РѕРІ Рё
+С‚РѕР»СЊРєРѕ РѕРґРЅРѕРіРѕ РєР°РїРёС‚Р°РЅР°.
 </option>
-<option value="image006.jpg">Вместе с тем, наша команда имела
-целых 7 капитанов и только одного
-гребца.
+<option value="image006.jpg">Р’РјРµСЃС‚Рµ СЃ С‚РµРј, РЅР°С€Р° РєРѕРјР°РЅРґР° РёРјРµР»Р°
+С†РµР»С‹С… 7 РєР°РїРёС‚Р°РЅРѕРІ Рё С‚РѕР»СЊРєРѕ РѕРґРЅРѕРіРѕ
+РіСЂРµР±С†Р°.
 </option>
-<option value="image007.jpg">И тут менеджмент нашей команды вдруг озарило:
-было предложено нанять консалтинговую фирму для
-реструктуризации нашей команды.
+<option value="image007.jpg">Р С‚СѓС‚ РјРµРЅРµРґР¶РјРµРЅС‚ РЅР°С€РµР№ РєРѕРјР°РЅРґС‹ РІРґСЂСѓРі РѕР·Р°СЂРёР»Рѕ:
+Р±С‹Р»Рѕ РїСЂРµРґР»РѕР¶РµРЅРѕ РЅР°РЅСЏС‚СЊ РєРѕРЅСЃР°Р»С‚РёРЅРіРѕРІСѓСЋ С„РёСЂРјСѓ РґР»СЏ
+СЂРµСЃС‚СЂСѓРєС‚СѓСЂРёР·Р°С†РёРё РЅР°С€РµР№ РєРѕРјР°РЅРґС‹.
 </option>
-<option value="image008.jpg">После нескольких месяцев консультирования они
-пришли к заключению, что наша команда имеет
-слишком много капитанов и слишком мало гребцов.
-На основе этого анализа они сделали предложение:
-структуру нашей команды надо поменять.
+<option value="image008.jpg">РџРѕСЃР»Рµ РЅРµСЃРєРѕР»СЊРєРёС… РјРµСЃСЏС†РµРІ РєРѕРЅСЃСѓР»СЊС‚РёСЂРѕРІР°РЅРёСЏ РѕРЅРё
+РїСЂРёС€Р»Рё Рє Р·Р°РєР»СЋС‡РµРЅРёСЋ, С‡С‚Рѕ РЅР°С€Р° РєРѕРјР°РЅРґР° РёРјРµРµС‚
+СЃР»РёС€РєРѕРј РјРЅРѕРіРѕ РєР°РїРёС‚Р°РЅРѕРІ Рё СЃР»РёС€РєРѕРј РјР°Р»Рѕ РіСЂРµР±С†РѕРІ.
+РќР° РѕСЃРЅРѕРІРµ СЌС‚РѕРіРѕ Р°РЅР°Р»РёР·Р° РѕРЅРё СЃРґРµР»Р°Р»Рё РїСЂРµРґР»РѕР¶РµРЅРёРµ:
+СЃС‚СЂСѓРєС‚СѓСЂСѓ РЅР°С€РµР№ РєРѕРјР°РЅРґС‹ РЅР°РґРѕ РїРѕРјРµРЅСЏС‚СЊ.
 </option>
-<option value="image009.jpg">С этого дня у нас должно быть только 4 капитана, 2
-менеджера, один топ-менеджер и один гребец.
-Согласно этому, они пришли к решению, что с гребцом
-надо интенсивно работать, чтобы повысить его
-мотивацию и стремление к победе.
+<option value="image009.jpg">РЎ СЌС‚РѕРіРѕ РґРЅСЏ Сѓ РЅР°СЃ РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ С‚РѕР»СЊРєРѕ 4 РєР°РїРёС‚Р°РЅР°, 2
+РјРµРЅРµРґР¶РµСЂР°, РѕРґРёРЅ С‚РѕРї-РјРµРЅРµРґР¶РµСЂ Рё РѕРґРёРЅ РіСЂРµР±РµС†.
+РЎРѕРіР»Р°СЃРЅРѕ СЌС‚РѕРјСѓ, РѕРЅРё РїСЂРёС€Р»Рё Рє СЂРµС€РµРЅРёСЋ, С‡С‚Рѕ СЃ РіСЂРµР±С†РѕРј
+РЅР°РґРѕ РёРЅС‚РµРЅСЃРёРІРЅРѕ СЂР°Р±РѕС‚Р°С‚СЊ, С‡С‚РѕР±С‹ РїРѕРІС‹СЃРёС‚СЊ РµРіРѕ
+РјРѕС‚РёРІР°С†РёСЋ Рё СЃС‚СЂРµРјР»РµРЅРёРµ Рє РїРѕР±РµРґРµ.
 </option>
-<option value="image010.jpg">ФИНИШ
-На следующий год конкуренты победили
-с разрывом в два километра.
+<option value="image010.jpg">Р¤РРќРРЁ
+РќР° СЃР»РµРґСѓСЋС‰РёР№ РіРѕРґ РєРѕРЅРєСѓСЂРµРЅС‚С‹ РїРѕР±РµРґРёР»Рё
+СЃ СЂР°Р·СЂС‹РІРѕРј РІ РґРІР° РєРёР»РѕРјРµС‚СЂР°.
 </option>
-<option value="image011.jpg">Гребца исключили из команды, поскольку были не
-удовлетворены результатом его работы.
+<option value="image011.jpg">Р“СЂРµР±С†Р° РёСЃРєР»СЋС‡РёР»Рё РёР· РєРѕРјР°РЅРґС‹, РїРѕСЃРєРѕР»СЊРєСѓ Р±С‹Р»Рё РЅРµ
+СѓРґРѕРІР»РµС‚РІРѕСЂРµРЅС‹ СЂРµР·СѓР»СЊС‚Р°С‚РѕРј РµРіРѕ СЂР°Р±РѕС‚С‹.
  </option>
-<option value="image012.jpg">Менеджеров наградили за высокие показатели по
-мотивации команды в отчетном периоде.
+<option value="image012.jpg">РњРµРЅРµРґР¶РµСЂРѕРІ РЅР°РіСЂР°РґРёР»Рё Р·Р° РІС‹СЃРѕРєРёРµ РїРѕРєР°Р·Р°С‚РµР»Рё РїРѕ
+РјРѕС‚РёРІР°С†РёРё РєРѕРјР°РЅРґС‹ РІ РѕС‚С‡РµС‚РЅРѕРј РїРµСЂРёРѕРґРµ.
 </option>
-<option value="image013.jpg">Консалтинговая фирма провела новый анализ,
-который показал, что стратегия была хорошая,
-мотивация ОК, но средства реализации плохие.
-Сейчас наша команда проектирует новую лодку.
+<option value="image013.jpg">РљРѕРЅСЃР°Р»С‚РёРЅРіРѕРІР°СЏ С„РёСЂРјР° РїСЂРѕРІРµР»Р° РЅРѕРІС‹Р№ Р°РЅР°Р»РёР·,
+РєРѕС‚РѕСЂС‹Р№ РїРѕРєР°Р·Р°Р», С‡С‚Рѕ СЃС‚СЂР°С‚РµРіРёСЏ Р±С‹Р»Р° С…РѕСЂРѕС€Р°СЏ,
+РјРѕС‚РёРІР°С†РёСЏ РћРљ, РЅРѕ СЃСЂРµРґСЃС‚РІР° СЂРµР°Р»РёР·Р°С†РёРё РїР»РѕС…РёРµ.
+РЎРµР№С‡Р°СЃ РЅР°С€Р° РєРѕРјР°РЅРґР° РїСЂРѕРµРєС‚РёСЂСѓРµС‚ РЅРѕРІСѓСЋ Р»РѕРґРєСѓ.
 </option>
