--- a/demo/data/rovers.html
+++ b/demo/data/rovers.html
@@ -1,59 +1,13 @@
-<option value="image001.jpg">Жила была одна команда гребцов </option>
-<option value="image002.jpg">Вызвала наша команда на соревнование по
-гребле команду конкурентов из другой страны. В
-состав той и другой команды включили по 8
-гребцов.
-</option>
-<option value="image003.jpg">ФИНИШ
-Обе команды тренировались очень упорно. И к
-моменту соревнований они были в одинаковой
-кондиции. Но конкуренты нас победили, обойдя
-на километр.
-</option>
-<option value="image004.jpg">Настроение в нашей команде было хуже некуда.
-Высшее руководство задумалось над тем, как нам
-победить их в следующем году. И позвали тогда
-группу аналитиков, чтобы проанализировать
-ситуацию и найти спасительное решение.
-</option>
-<option value="image005.jpg">В результате после нескольких
-дней детального анализа команд
-они пришли к заключению, что
-конкуренты имеют 7 гребцов и
-только одного капитана.
-</option>
-<option value="image006.jpg">Вместе с тем, наша команда имела
-целых 7 капитанов и только одного
-гребца.
-</option>
-<option value="image007.jpg">И тут менеджмент нашей команды вдруг озарило:
-было предложено нанять консалтинговую фирму для
-реструктуризации нашей команды.
-</option>
-<option value="image008.jpg">После нескольких месяцев консультирования они
-пришли к заключению, что наша команда имеет
-слишком много капитанов и слишком мало гребцов.
-На основе этого анализа они сделали предложение:
-структуру нашей команды надо поменять.
-</option>
-<option value="image009.jpg">С этого дня у нас должно быть только 4 капитана, 2
-менеджера, один топ-менеджер и один гребец.
-Согласно этому, они пришли к решению, что с гребцом
-надо интенсивно работать, чтобы повысить его
-мотивацию и стремление к победе.
-</option>
-<option value="image010.jpg">ФИНИШ
-На следующий год конкуренты победили
-с разрывом в два километра.
-</option>
-<option value="image011.jpg">Гребца исключили из команды, поскольку были не
-удовлетворены результатом его работы.
- </option>
-<option value="image012.jpg">Менеджеров наградили за высокие показатели по
-мотивации команды в отчетном периоде.
-</option>
-<option value="image013.jpg">Консалтинговая фирма провела новый анализ,
-который показал, что стратегия была хорошая,
-мотивация ОК, но средства реализации плохие.
-Сейчас наша команда проектирует новую лодку.
-</option>
+<option value="image001.jpg">I</option>
+<option value="image002.jpg">II</option>
+<option value="image003.jpg">III</option>
+<option value="image004.jpg">IV</option>
+<option value="image005.jpg">V</option>
+<option value="image006.jpg">VI</option>
+<option value="image007.jpg">VII</option>
+<option value="image008.jpg">VIII</option>
+<option value="image009.jpg">IX</option>
+<option value="image010.jpg">X</option>
+<option value="image011.jpg">XI</option>
+<option value="image012.jpg">XII</option>
+<option value="image013.jpg">XIII</option>
