--- a/demo/textarea_preview/textarea_preview.html
+++ b/demo/textarea_preview/textarea_preview.html
@@ -18,7 +18,7 @@
 
 Например ниже приведена карта сайта, отображаемая слева. 
 <span id=sitemap_area>
-<div class=sitemap_current>sitemap.xml</div>
+<div class=sitemap_current>/sitemap.xml</div>
 </span>
 
 <span id=preview_area>
